--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -1,43 +1,72 @@
-<p>detail-gig works!</p>
-<h2>Detail Page</h2>
-<p>Item ID: {{ itemId }}</p>
-
+<div class=" m-5">
 <div class="container-fluid">
      <div class="row">
-          <div class="col-md-8">
-            <div class="card" style="width: 100%;">
-
-                <img  class="card-img-top" src={{a.photo}} style="width: 50%;">
+          <div class="col-md-7">
+            <a class="my-3" style="margin-right: 2px;">{{gig.Category}} </a>
+              >
+            <a href="">{{gig.subCategoryId}}</a>
+            <div class="my-4" style="width: 100%;"> 
+                <h2 class="mb-3">{{gig.gigtitle}} {{gig.nameUser}}</h2>
+           
+                <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4">
+                
                 <div class="card-body">
-                  
-                  <h5 class="card-title">{{a.gigtitle}}</h5>
-                  <p>{{a.CategoryId}}</p>
-
-                  <div [innerHTML]="contentHtmlDes"></div>
-
-                 
+                  <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
+                  <div class="description">
+                    <h5 class="mt-3">About this gig</h5>
+                    <div [innerHTML]="contentHtmlDes"></div>
+                  </div>
+                  <div class="seller">
+                    <h5 class="mt-3">About this Seller</h5>
+                    <div></div>
+                  </div>
                 </div>
 
 
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">An item</li>
-                  <li class="list-group-item">A second item</li>
-                  <li class="list-group-item">A third item</li>
-                </ul>
-                <div class="card-body">
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
-                </div>
+                
               </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 card p-4" style="height: 100%;">
+
             <mat-tab-group>
-  <mat-tab label="First"> Content 1 </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
+              <mat-tab label="Basic" >
+                <div class="m-4">
+                  <b class="my-5">{{gig.packs[0].name}} </b>
+                  <p style="display: inline; float:right">{{gig.packs[0].price| currency:'$'}}</p>
+                  <p class="my-4"> {{gig.packs[0].description}} </p>
+                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                </div>
+              </mat-tab>
+              <mat-tab label="Standard" *ngIf="gig.packs[1]">
+                <div class="m-4">
+                  <b class="my-5">{{gig.packs[1].name}} </b>
+                  <p style="display: inline; float:right">{{gig.packs[1].price| currency:'$'}}</p>
+                  <p class="my-4"> {{gig.packs[1].description}} </p>
+                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                </div>
+              </mat-tab>
+              <mat-tab label="Premium"  *ngIf="gig.packs[1]">
+                <div class="m-4">
+                  <b class="my-5">{{gig.packs[2].name}} </b>
+                  <p style="display: inline; float:right">{{gig.packs[2].price| currency:'$'}}</p>
+                  <p class="my-4"> {{gig.packs[2].description}} </p>
+                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                </div>
+              </mat-tab>
+            </mat-tab-group>
+            <div>
+              <a class="fancy" href="#">
+                <span class="top-key"></span>
+                <span class="text">Proceed to payment</span>
+                <span class="bottom-key-1"></span>
+                <span class="bottom-key-2"></span>
+              </a>
+            </div>
+
           </div>
+          
          
      </div>
 
+</div>
 </div>
