--- a/src/app/account/dashboard/gig/manage-gigs/manage-gigs.component.html
+++ b/src/app/account/dashboard/gig/manage-gigs/manage-gigs.component.html
@@ -4,7 +4,7 @@
     <div class="row">
           <div class="col-col-2"></div>
           <div class="col-col-8">
-           <div > <a mat-raised-button color="accent" routerLink="add_gig">CREATE A NEW GEG</a></div>
+           <div > <a mat-raised-button color="accent" routerLink="add_gig">CREATE A NEW GIG</a></div>
             <hr>
              <mat-tab-group fitInkBarToContent>
                 <mat-tab label="All Gigs" ><app-gig-list></app-gig-list></mat-tab>
