--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -1,24 +1,40 @@
 <div class=" m-5">
 <div class="container-fluid">
      <div class="row">
-          <div class="col-md-7">
+      <div class="col-sm-1"> </div>
+          <div class="col-md-6">
             <a class="my-3" style="margin-right: 2px;">{{gig.Category}} </a>
               >
             <a href="">{{gig.subCategoryId}}</a>
             <div class="my-4" style="width: 100%;"> 
-                <h2 class="mb-3">{{gig.gigtitle}} {{gig.nameUser}}</h2>
+                <h2 class="mb-3">{{gig.gigtitle}}</h2>
            
-                <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4">
-                
+                <div style="display: flex;align-items: center;">
+                  <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4">
+                  <p style="display:inline-block"> {{gig.nameUser}} <span class="username">@{{gig.username}}</span></p>
+                </div>
                 <div class="card-body">
                   <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
                   <div class="description">
                     <h5 class="mt-3">About this gig</h5>
                     <div [innerHTML]="contentHtmlDes"></div>
                   </div>
-                  <div class="seller">
-                    <h5 class="mt-3">About this Seller</h5>
-                    <div></div>
+                  <h5 class="mt-5">About this Seller</h5>
+                  
+                  <div class="seller mt-5">
+                    <div class="box">
+                     
+                      <div class="content">
+                        <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4" style="margin-left:150px;">
+                        <p style="color:black;  margin-right:100px">{{gig.nameUser}}</p>
+                        <button class="shadow__btn">
+                          <p >Contact me</p>
+                        </button>
+                      </div>
+                     
+                    </div>
+                  
+                    
                   </div>
                 </div>
 
@@ -26,7 +42,7 @@
                 
               </div>
           </div>
-          <div class="col-md-4 card p-4" style="height: 100%;">
+          <div class="col-md-4 card p-4 packages">
 
             <mat-tab-group>
               <mat-tab label="Basic" >
