--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.scss
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.scss
@@ -1,6 +1,7 @@
 .profile{
     width: 50px;
-    border-radius: 50%;
+    border-radius: 50%; 
+    margin-right: 10px;
 }
 h2{
     font-weight: 700;
@@ -13,9 +14,19 @@ h5{
 .description{
     font-size: 14px;
 }
-
-
-
+.packages{
+    height: 100%; 
+    margin-left:60px;
+}
+.seller {
+    .profile{
+      width: 100px;  
+    }
+}
+.username{
+    color: #565656;
+    padding-bottom: 100px
+}
 
 
 
@@ -122,3 +133,105 @@ h5{
     right: 0;
     width: 0;
    }
+
+   
+
+
+   .box {
+    position: relative;
+    width:300px;
+    height: 250px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    transition: 0.5s;
+    z-index: 1;
+   }
+   
+   .box::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 25%;
+    height: 100%;
+    text-decoration: none;
+    background: #fff;
+    border-radius: 8px;
+    transform: skewX(15deg);
+    transition: 0.5s;
+   }
+   
+   .box::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50;
+    width: 25%;
+    height: 100%;
+    background: #fff;
+    border-radius: 8px;
+    transform: skewX(15deg);
+    transition: 0.5s;
+    filter: blur(30px);
+   }
+   
+   .box:hover:before,
+   .box:hover:after {
+    transform: skewX(0deg) scaleX(1.3);
+   }
+   
+   .box:before,
+   .box:after {
+    background: linear-gradient(0deg, #b2dafe, #4361ee)
+   }
+   
+   .box .content {
+    position: relative;
+    top: 25px;
+    left: -100px;
+    width: 600px;
+    height: 200px;
+    margin-left: 100px;
+    padding: 10px ;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1;
+    transform: 0.5s;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   
+   .box .content h2 {
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 10px;
+   }
+
+
+
+
+
+   .shadow__btn {
+    padding: 5px;
+    border: none;
+    font-size: 10px;
+    color: #fff;
+    border-radius: 7px;
+    font-weight: 700;
+    transition: 0.5s;
+    transition-property: box-shadow;
+  }
+  
+  .shadow__btn {
+    background:#4361ee;
+    box-shadow: 0 0 10px #4361ee;
+  }
+  
+  .shadow__btn:hover {
+    box-shadow: 0 0 15px #4361ee;
+  }
