--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.scss
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.scss
@@ -7,7 +7,7 @@ h2{
     font-weight: 700;
     color: rgb(70, 69, 69);
 }
-h5{
+h5,h6{
     font-weight: 700;
     color: rgb(70, 69, 69);
 }
@@ -217,9 +217,9 @@ h5{
 
 
    .shadow__btn {
-    padding: 5px;
+    padding: 10px 10px;
     border: none;
-    font-size: 10px;
+    font-size: 12px;
     color: #fff;
     border-radius: 7px;
     font-weight: 700;
