--- a/src/app/account/profile/profile.component.html
+++ b/src/app/account/profile/profile.component.html
@@ -33,7 +33,7 @@
                                         <span >Member since</span>
                                     </div>
                                     <div class="col-6"></div>
-                                    <div class="col-3"> <b>Mar 2023</b></div> 
+                                    <div class="col-3"> <b>{{user.updatedAt}}</b></div> 
                                 </div>  
                             </li>
                             <li class="my-3">
