--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -1,3 +1,13 @@
+<mat-toolbar >
+  
+    <a href="#overview" fragment="overview">Overview</a>
+    <a href="#description" fragment="description">Description</a>
+    <a href="#seller" fragment="seller">About the seller</a>
+</mat-toolbar>
+
+
+
+
 <div class=" m-5">
 <div class="container-fluid">
      <div class="row">
@@ -6,7 +16,7 @@
             <a class="my-3" style="margin-right: 2px;">{{gig.Category}} </a>
               >
             <a href="">{{gig.subCategoryId}}</a>
-            <div class="my-4" style="width: 100%;"> 
+            <div class="my-4" style="width: 100%;" id="overview"> 
                 <h2 class="mb-3">{{gig.gigtitle}}</h2>
            
                 <div style="display: flex;align-items: center;">
@@ -15,26 +25,55 @@
                 </div>
                 <div class="card-body">
                   <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
-                  <div class="description">
+                  <div class="description"  id="description">
                     <h5 class="mt-3">About this gig</h5>
                     <div [innerHTML]="contentHtmlDes"></div>
                   </div>
                   <h5 class="mt-5">About this Seller</h5>
                   
-                  <div class="seller mt-5">
+                  <div class="seller mt-5" id="seller">
+
                     <div class="box">
-                     
                       <div class="content">
                         <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4" style="margin-left:150px;">
-                        <p style="color:black;  margin-right:100px">{{gig.nameUser}}</p>
+                        <div>
+                          <p style="color:black;  margin-right:100px">{{gig.nameUser}} <br> @ {{gig.username}}</p>
+                        </div>
                         <button class="shadow__btn">
-                          <p >Contact me</p>
+                          <p style="margin: 0;">Contact me</p>
                         </button>
                       </div>
-                     
                     </div>
-                  
-                    
+                    <div class="card p-3" style="width: 600px; margin-top:30px;">
+                      <div *ngIf="gig.userSkills">
+                        <h5>Skills</h5>
+                        <p  *ngFor="let skill of gig.userSkills">{{skill.name}} • </p>
+                        <mat-divider ></mat-divider>
+                      </div>
+                      <div class="mt-2">
+                        <div class="row">
+                        <div class="col-4">
+                          <h6 style="font-size:15px">Languages</h6>
+                          <p *ngFor="let language of gig.userLanguages"
+                            matTooltip={{language.level}}
+                            style="display: inline-block;"
+                          >{{language.name}}, </p>
+                        </div>
+                        <div class="col-3">
+                          <h6 style="font-size:15px">From </h6>
+                          <p>Morocco</p>
+                        </div>
+                        <div class="col-3">
+                          <h6 style="font-size:15px">Member since </h6>
+                          <p>{{gig.userCreatedAt}}</p>
+                        </div>
+                        </div>
+                        
+                      </div>
+                      <mat-divider ></mat-divider>
+
+                      <p> {{gig.userDescription}} </p>
+                    </div>
                   </div>
                 </div>
 
@@ -42,6 +81,16 @@
                 
               </div>
           </div>
+
+
+
+
+
+
+
+
+
+
           <div class="col-md-4 card p-4 packages">
 
             <mat-tab-group>
@@ -86,3 +135,4 @@
 
 </div>
 </div>
+
