--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -8,6 +8,7 @@
             <a href="">{{gig.subCategoryId}}</a>
             <div class="my-4" style="width: 100%;"> 
                 <h2 class="mb-3">{{gig.gigtitle}}</h2>
+                
            
                 <div style="display: flex;align-items: center;">
                   <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4">
@@ -15,6 +16,7 @@
                 </div>
                 <div class="card-body">
                   <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
+                  
                   <div class="description">
                     <h5 class="mt-3">About this gig</h5>
                     <div [innerHTML]="contentHtmlDes"></div>
@@ -27,9 +29,11 @@
                       <div class="content">
                         <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4" style="margin-left:150px;">
                         <p style="color:black;  margin-right:100px">{{gig.nameUser}}</p>
-                        <button class="shadow__btn">
-                          <p >Contact me</p>
+                        <button class="shadow__btn"    (click)="CreateRoom()">
+                       Contact me <mat-icon> message</mat-icon>
                         </button>
+
+            
                       </div>
                      
                     </div>
@@ -42,47 +46,74 @@
                 
               </div>
           </div>
-          <div class="col-md-4 card p-4 packages">
 
-            <mat-tab-group>
-              <mat-tab label="Basic" >
-                <div class="m-4">
-                  <b class="my-5">{{gig.packs[0].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[0].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[0].description}} </p>
-                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
-                </div>
-              </mat-tab>
-              <mat-tab label="Standard" *ngIf="gig.packs[1]">
-                <div class="m-4">
-                  <b class="my-5">{{gig.packs[1].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[1].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[1].description}} </p>
-                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
-                </div>
-              </mat-tab>
-              <mat-tab label="Premium"  *ngIf="gig.packs[2]">
-                <div class="m-4">
-                  <b class="my-5">{{gig.packs[2].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[2].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[2].description}} </p>
-                  <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
-                </div>
-              </mat-tab>
-            </mat-tab-group>
-            <div>
-              <a class="fancy" href="#">
-                <span class="top-key"></span>
-                <span class="text">Proceed to payment</span>
-                <span class="bottom-key-1"></span>
-                <span class="bottom-key-2"></span>
-              </a>
+           <div class="col-md-4 ">
+                    
+            <div class=" card p-4 packages">
+
+              <mat-tab-group>
+                <mat-tab label="Basic" >
+                  <div class="m-4">
+                    <b class="my-5">{{gig.packs[0].name}} </b>
+                    <p style="display: inline; float:right">{{gig.packs[0].price| currency:'$'}}</p>
+                    <p class="my-4"> {{gig.packs[0].description}} </p>
+                    <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Standard" *ngIf="gig.packs[1]">
+                  <div class="m-4">
+                    <b class="my-5">{{gig.packs[1].name}} </b>
+                    <p style="display: inline; float:right">{{gig.packs[1].price| currency:'$'}}</p>
+                    <p class="my-4"> {{gig.packs[1].description}} </p>
+                    <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Premium"  *ngIf="gig.packs[2]">
+                  <div class="m-4">
+                    <b class="my-5">{{gig.packs[2].name}} </b>
+                    <p style="display: inline; float:right">{{gig.packs[2].price| currency:'$'}}</p>
+                    <p class="my-4"> {{gig.packs[2].description}} </p>
+                    <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
+                  </div>
+                </mat-tab>
+              </mat-tab-group>
+              <div>
+                <a class="fancy" href="#">
+                  <span class="top-key"></span>
+                  <span class="text">Proceed to payment</span>
+                  <span class="bottom-key-1"></span>
+                  <span class="bottom-key-2"></span>
+                </a>
+              </div>
+               
+             
+
+                    
+  
             </div>
 
-          </div>
+            <div class="packages" style="width: 350px;height: 400px;">
+   
+              <app-chat [getData]="idOfUserGig"></app-chat>
           
+          </div>
+
+
+
+
+
+           </div>
+          
+         
          
      </div>
 
 </div>
 </div>
+
+
+
+  
+
+
+
