add reviews, fixing bugs

--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -21,7 +21,15 @@
            
                 <div style="display: flex;align-items: center;">
                   <img src="../../../../../../assets/pics/profilepic.jpeg" class="profile mb-4">
-                  <p style="display:inline-block"> {{gig.nameUser}} <span class="username">@{{gig.username}}</span></p>
+                  <p style="display:inline-block"> {{gig.nameUser}} <span class="username mx-2">@{{gig.username}} |</span>  
+                    <i [ngClass]="reviewsTotal>=1 ? 'bi-star-fill ': 'bi-star'"  class="bi" style="color:#ffd166"></i>
+                    <i [ngClass]="reviewsTotal>=2 ? 'bi-star-fill ': 'bi-star'"  class="bi" style="color:#ffd166"></i>
+                    <i [ngClass]="reviewsTotal>=3 ? 'bi-star-fill ': 'bi-star'"  class="bi" style="color:#ffd166"></i>
+                    <i [ngClass]="reviewsTotal>=4 ? 'bi-star-fill ': 'bi-star'"  class="bi" style="color:#ffd166"></i>
+                    <i [ngClass]="reviewsTotal==5 ? 'bi-star-fill ': 'bi-star'"  class="bi" style="color:#ffd166"></i>
+                  </p>
+                 
+
                 </div>
                 <div class="card-body">
                   <img  class="card-img-top" src={{gig.photo}} style="width: 85%;">
@@ -47,7 +55,7 @@
                     <div class="card p-3" style="width: 600px; margin-top:30px;">
                       <div *ngIf="gig.userSkills">
                         <h5>Skills</h5>
-                        <p  *ngFor="let skill of gig.userSkills">{{skill.name}} • </p>
+                        <p  *ngFor="let skill of gig.userSkills" style="display: inline-block;">{{skill.name}} • </p>
                         <mat-divider ></mat-divider>
                       </div>
                       <div class="mt-2">
@@ -70,9 +78,8 @@
                         </div>
                         
                       </div>
-                      <mat-divider ></mat-divider>
-
-                      <p> {{gig.userDescription}} </p>
+                      <mat-divider class="mb-2"></mat-divider>
+                        <p> {{gig.userDescription}} </p>
                     </div>
                   </div>
                 </div>
@@ -90,31 +97,31 @@
 
 
 
-
-          <div class="col-md-4 card p-4 packages">
+        <div class="col-md-4 packages">
+          <div class="card p-4 ">
 
             <mat-tab-group>
               <mat-tab label="Basic" >
                 <div class="m-4">
-                  <b class="my-5">{{gig.packs[0].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[0].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[0].description}} </p>
+                  <b class="my-5">{{packOne.name}} </b>
+                  <p style="display: inline; float:right">{{packOne.price| currency:'$'}}</p>
+                  <p class="my-4"> {{packOne.description}} </p>
                   <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
                 </div>
               </mat-tab>
-              <mat-tab label="Standard" *ngIf="gig.packs[1]">
+              <mat-tab label="Standard" *ngIf="x">
                 <div class="m-4">
-                  <b class="my-5">{{gig.packs[1].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[1].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[1].description}} </p>
+                  <b class="my-5">{{packTwo.name}} </b>
+                  <p style="display: inline; float:right">{{packTwo.price| currency:'$'}}</p>
+                  <p class="my-4"> {{packTwo.description}} </p>
                   <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
                 </div>
               </mat-tab>
-              <mat-tab label="Premium"  *ngIf="gig.packs[2]">
+              <mat-tab label="Premium"  *ngIf="x">
                 <div class="m-4">
-                  <b class="my-5">{{gig.packs[2].name}} </b>
-                  <p style="display: inline; float:right">{{gig.packs[2].price| currency:'$'}}</p>
-                  <p class="my-4"> {{gig.packs[2].description}} </p>
+                  <b class="my-5">{{packThree.name}} </b>
+                  <p style="display: inline; float:right">{{packThree.price| currency:'$'}}</p>
+                  <p class="my-4"> {{packThree.description}} </p>
                   <p><i class="bi bi-clock-history"></i> 10 Days Delivery</p>
                 </div>
               </mat-tab>
@@ -127,9 +134,14 @@
                 <span class="bottom-key-2"></span>
               </a>
             </div>
-
+            
           </div>
-          
+          <div class="card mt-4 p-3" *ngIf="!displayReviewVar"  >
+            <h2 style="font-size: 17px;" class="mx-3">Review the gig</h2>
+              
+              <app-stars></app-stars>
+          </div>
+        </div>
          
      </div>
 
