--- a/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
+++ b/src/app/account/dashboard/gig/home-gigs/detail-gig/detail-gig.component.html
@@ -48,7 +48,7 @@
                         <p style="color:black;  margin-right:100px">{{gig.nameUser}} <br> @ {{gig.username}}</p>
                       </div>
                       <button class="shadow__btn">
-                        <p style="margin: 0;">Contact me</p>
+                        <p style="margin: 0;" (click)="CreateRoom()">Contact me <mat-icon> message</mat-icon></p>
                       </button>
                     </div>
                   </div>
@@ -84,10 +84,30 @@
                 </div>
               </div>
 
-
-              
+             <div class="mt-5">
+              <h5 class="mt-5 mb-3">FAQ</h5>
+              <mat-accordion *ngFor="let faq of faqArray">
+                  <div class="mt-3">
+                    <mat-expansion-panel hideToggle>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          {{faq.question}}
+                        </mat-panel-title>
+                        <mat-panel-description>
+                   
+                        </mat-panel-description>
+                      </mat-expansion-panel-header>
+                      <p>  {{faq.response}}</p>
+                    </mat-expansion-panel>
+                  </div>
+              </mat-accordion>
+             </div>
+   
             </div>
         </div>
+
+
+
 
 
 
